@@ -7,6 +7,10 @@ Changelog
 * Fixed a grammar error in ``error.pt``.
   [hannosch]
 
+* Handle python datetime and date objects.
+  [do3cc]
+
+
 1.0rc2 - Released August 31, 2010
 ---------------------------------
 
